--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "axios": "^1.7.4",
     "emoji-mart": "^5.6.0",
-    "nodemon": "^3.1.4",
     "react-textarea-autosize": "^8.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
