--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-textarea-autosize": "^8.5.3",
     "web-vitals": "^2.1.4"
