--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM node:latest
 WORKDIR /app
 COPY package*.json  ./
 RUN npm install
+RUN npm install react-scripts
 COPY . .
 EXPOSE 3000
 CMD ["npm","start"]
